--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
 sdk.dir=C:\\Users\\sub\\AppData\\Local\\Android\\sdk
-flutter.sdk=C:\\Users\\sub\\Downloads\\flutter_windows_3.13.8-stable\\flutter
+flutter.sdk=C:\\flutter_windows_3.13.9-stable\\flutter
