--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cached_network_image: ^3.3.1
   expandable_text: ^2.3.0
   quiver: ^3.2.1
-  photo_manager: ^2.8.1
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
