--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
+  font_awesome_flutter: ^9.2.0
+
 
 dev_dependencies:
   flutter_test:
