--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "soldout",
-    "short_name": "soldout",
+    "name": "instargram",
+    "short_name": "instargram",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
