--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   expandable_text: ^2.3.0
   quiver: ^3.2.1
   photo_manager: ^1.3.10
+  font_awesome_flutter: ^9.2.0
+
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.8
+  google_sign_in: ^5.2.4
 
 dev_dependencies:
   flutter_test:
