--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   firebase_auth: ^4.17.5
   google_sign_in: ^5.2.4
   cloud_firestore: ^4.15.5
+  image_picker: ^1.0.7
+  firebase_storage: ^11.6.6
 
 dev_dependencies:
   flutter_test:
